--- a/README
+++ b/README
@@ -506,14 +506,14 @@ C) CUPS
 
 D) CUPS dye-sublimation backend
 
-    A new CUPS backend was added to support USB printers that require a
-    special communications protocol. The backend is called 
-    'gutenprint52usb' and requires libusb 1.x in order to build.  We 
-    recommend libusb 1.0.13 or newer, although older versions will function
-    with reduced functionality (see note below).
+    A new CUPS backend was added to support USB printers that require
+    a special communications protocol. The backend is called
+    'gutenprint52usb' and requires libusb 1.x in order to build.  We
+    recommend libusb 1.0.13 or newer, although older versions will
+    function with reduced functionality (see note below).
 
-    The following dye-sublimation printers require this backend in order
-    to function properly:
+    The following dye-sublimation printers require this backend in
+    order to function properly:
 
         Canon SELPHY ES series  (All models)
         Canon SELPHY CP series  (All models except CP520, CP820 and CP910)
@@ -535,72 +535,76 @@ D) CUPS dye-sublimation backend
     Over time, it is expected that additional printer models will be
     supported by this backend.
 
-    Although these printers advertise themselves as standard USB Printer
-    Class devices, they do not actually obey those specifications, and
-    require two-way handshaking in order to successfully print.
+    Although these printers advertise themselves as standard USB
+    Printer Class devices, they do not actually obey those
+    specifications, and require two-way handshaking in order to
+    successfully print.
 
-    If you do not have one of the printers listed above, this backend is
-    not relevant for you and you can just ignore everything below.
+    If you do not have one of the printers listed above, this backend
+    is not relevant for you and you can just ignore everything below.
  
-    If you are using up-to-date versions of CUPS (1.6.4 or newer) on Linux,
-    then your system will automatically select this backend if you plug in 
-    one of its supported printers.  No further intervention on the user's 
-    part should be necessary.
+    If you are using up-to-date versions of CUPS (1.6.4 or newer) on
+    Linux, then your system will automatically select this backend if
+    you plug in one of its supported printers.  No further
+    intervention on the user's part should be necessary.
 
-    Unfortunately, if you are using an older version of CUPS or a non-Linux
-    system (particularly OSX) then you will probably need to manually
-    configure the use of this backend, as the system may attempt to use the
-    default usb backend which does not work properly with these printers.
+    Unfortunately, if you are using an older version of CUPS or a
+    non-Linux system (particularly OSX) then you will probably need to
+    manually configure the use of this backend, as the system may
+    attempt to use the default usb backend which does not work
+    properly with these printers.
 
-    To check which backend your printers are using, run the 'lpstat -s' 
-    command.  Below is an example of its output:
+    To check which backend your printers are using, run the 'lpstat
+    -s' command.  Below is an example of its output:
 
       device for Canon_SELPHY_ES1: gutenprint52+usb://Canon/SELPHY%20ES1?serial=221CD10131&backend=canonselphy
       device for Canon_SELPHY_ES3: usb://Canon/Canon%20SELPHY%20ES3
 
-    In this example, the SELPHY ES1 is using the correct gutenprint backend, 
-    but the ES3 is using the incorrect 'usb' backend. In order for the ES3 to
-    function properly, you need to configure it to use the correct backend.
+    In this example, the SELPHY ES1 is using the correct gutenprint
+    backend, but the ES3 is using the incorrect 'usb' backend. In
+    order for the ES3 to function properly, you need to configure it
+    to use the correct backend.
 
-    The most expedient way to accomplish this is to remove the printer via your
-    system's printer configuration interface, then manually add a new one,
-    taking care to select the correct backend ("gutenprint52+usb"). This 
-    backend name is present in the device URI for the printer, as 
-    demonstrated in the above example.  An alternative to the system printer 
-    configuration interface is to use your local system's CUPS web interface,
-    if it is enabled. Step-by-step instructions for using any of these 
+    The most expedient way to accomplish this is to remove the printer
+    via your system's printer configuration interface, then manually
+    add a new one, taking care to select the correct backend
+    ("gutenprint52+usb"). This backend name is present in the device
+    URI for the printer, as demonstrated in the above example.  An
+    alternative to the system printer configuration interface is to
+    use your local system's CUPS web interface, if it is
+    enabled. Step-by-step instructions for using any of these
     interfaces is beyond the scope of this document.
 
-    Once the printer is properly configured, this backend will be 
-    automatically invoked as needed; the user will never invoke the backend
-    directly.
+    Once the printer is properly configured, this backend will be
+    automatically invoked as needed; the user will never invoke the
+    backend directly.
 
        NOTE ON PRINTERS WITHOUT SERIAL NUMBERS:
 
     If your CUPS queue URI reports a serial number of 'Bxxx_Dyyy' then
-    your printer does not export a proper serial number, and was assigned 
-    a fake serial number based on the logical USB bus and device 
-    enumeration.  For example, 'B002_D007' means the printer was detected
-    on logical bus 2, and assigned device id 7.
+    your printer does not export a proper serial number, and was
+    assigned a fake serial number based on the logical USB bus and
+    device enumeration.  For example, 'B002_D007' means the printer
+    was detected on logical bus 2, and assigned device id 7.
 
-    This has the unfortunate side-effect of possibly rendering the queue 
-    nonoperational if the printer is moved to a different port, as it may
-    be enumerated differently.
+    This has the unfortunate side-effect of possibly rendering the
+    queue nonoperational if the printer is moved to a different port,
+    as it may be enumerated differently.
 
        NOTE ON LIBUSB COMPATIBILITY:
 
-    If your printer does not export a serial number (see above), and 
-    your URI reports a serial number ending in 'P255' then you are also
-    using an version of libusb older than 1.0.13.
+    If your printer does not export a serial number (see above), and
+    your URI reports a serial number ending in 'P255' then you are
+    also using an version of libusb older than 1.0.13.
 
     Older versions do not provide a way to determine the full USB
-    topology, so unless you have at least 1.0.13, we cannot distinguish 
-    between multiple printers of the same type (or family) plugged in
-    simultaneously.  
+    topology, so unless you have at least 1.0.13, we cannot
+    distinguish between multiple printers of the same type (or family)
+    plugged in simultaneously.
 
-    If your printer exports a serial number, then this problem will not
-    affect you and you can simultaneously use multiple printers of the same
-    type no matter what version of libusb you are using.
+    If your printer exports a serial number, then this problem will
+    not affect you and you can simultaneously use multiple printers of
+    the same type no matter what version of libusb you are using.
 
 
 ----------------
